# Flower-DataBase-DSBA-project-cpp-2024

./: CMakeLists.txt  README.md  app_icon.qrc  app_icon.rc  app_icon.rc.txt  auth  compflow.cpp  compflow.h  compflow.ui  flowercard.cpp  flowercard.h  flowercard.ui  flowercontainer.cpp  flowercontainer.h  flowerlabel.cpp  flowerlabel.h  gardnerwindow.cpp  gardnerwindow.h  icon_1.qrc  informationwind.cpp  informationwind.h  informationwind.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stat
img/: CMakeLists.txt.user.3262d28
tests/: test_main.cpp
